fix: font-weight too light on prod

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -64,7 +64,7 @@
 *::after {
   box-sizing: border-box;
   margin: 0;
-  font-weight: normal;
+  font-weight: 700;
   font-family: var(--font-mono);
   /* outline: 1px solid lime; */
 }
